Called Div classes for option and map boxes.

--- a/infoPrimary.html
+++ b/infoPrimary.html
@@ -17,5 +17,21 @@
 			Past Air Future 
 		</h1>
 	</main>
+
+	<div class ="map">
+
+	</div>
+
+	<div class ="locations">
+
+	</div>
+
+	<div class ="chemicals">
+
+	</div>
+
+	<div class ="timeline">
+
+	</div>
 </body>
 </html>
