Added Container for Map and Locations to use flexbox. Made a div for the background and for the title.

--- a/infoPrimary.html
+++ b/infoPrimary.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>PastAirFuture</title>
-	<link rel="stylesheet" href="appPrimary.css">
+	<link rel='stylesheet' href='appPrimary.css'>
 	<script type="text/javascript">
 		var electron = require('electron');
 		var shell = electron.shell;
@@ -18,20 +18,25 @@
 		</h1>
 	</main>
 
-	<div class ="map">
+	<div id="container">
+		<div class ="locations">
+			<div class = "list">
+				Locations
+			</div>
+		</div>
 
-	</div>
-
-	<div class ="locations">
-
+		<div class ="map">
+			Map
+		</div>
 	</div>
 
 	<div class ="chemicals">
-
+		Chemicals
 	</div>
-
 	<div class ="timeline">
-
+		Timeline
 	</div>
+
 </body>
+
 </html>
