Added Earth WebGL View

--- a/infoPrimary.html
+++ b/infoPrimary.html
@@ -4,14 +4,37 @@
 <head>
 	<title>PastAirFuture</title>
 	<link rel='stylesheet' href='appPrimary.css'>
+	<script src="http://www.webglearth.com/v2/api.js"></script>
 	<script type="text/javascript">
 		var electron = require('electron');
 		var shell = electron.shell;
 		var ipc = electron.ipcRenderer;
 	</script>
+
+	<script>
+	var earth;
+	function initialize() {
+	  earth = new WE.map('earth_div');
+	  earth.setView([46.8011, 8.2266], 1);
+	  WE.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+		attribution: '© OpenStreetMap contributors'
+	  }).addTo(earth);
+
+	  // Start a simple rotation animation
+	  var before = null;
+	  requestAnimationFrame(function animate(now) {
+		  var c = earth.getPosition();
+		  var elapsed = before? now - before: 0;
+		  before = now;
+		  earth.setCenter([c[0], c[1] + 0.1*(elapsed/30)]);
+		  requestAnimationFrame(animate);
+	  });
+	}
+  </script>
+	
 </head>
 
-<body id="page-info">
+<body id="page-info"  onload="initialize()">
 	<main class="title">
 		<h1>
 			Past Air Future 
@@ -26,18 +49,13 @@
 		</div>
 
 		<div class ="map">
-			Map
+			<div id="earth_div"></div>
 		</div>
 	</div>
-	<!--
-	<div class ="chemicals">
-		Chemicals
-	</div>
-	-->
+
 	<div class ="timeline">
 		Timeline
 	</div>
 
 </body>
-
 </html>
