--- a/infoPrimary.html
+++ b/infoPrimary.html
@@ -5,6 +5,10 @@
 	<title>PastAirFuture</title>
 	<link rel='stylesheet' href='appPrimary.css'>
 	<script src="http://www.webglearth.com/v2/api.js"></script>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+	<link rel="stylesheet" href="/resources/demos/style.css">
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript">
 		var electron = require('electron');
 		var shell = electron.shell;
@@ -30,8 +34,18 @@
 		  requestAnimationFrame(animate);
 	  });
 	}
+
+	$( function() {
+	  $( "#slider" ).slider();
+	} );
+
+	var slider = document.getElementById("myRange");
+	var output = document.getElementById("demo");
+	output.innerHTML = slider.value;
+	slider.oninput = function() {
+	output.innerHTML = this.value;
+}
   </script>
-	
 </head>
 
 <body id="page-info"  onload="initialize()">
@@ -54,7 +68,10 @@
 	</div>
 
 	<div class ="timeline">
-		Timeline
+		<div class="slidecontainer">
+			<input type="range" min="2000" max="2019" value="2015" class="slider" id="myRange">
+			<p>Year: <span id="demo"></span></p>
+		  </div>
 	</div>
 
 </body>
