--- a/infoPrimary.html
+++ b/infoPrimary.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript">
 		var electron = require('electron');
@@ -44,7 +45,25 @@
 	output.innerHTML = slider.value;
 	slider.oninput = function() {
 	output.innerHTML = this.value;
+	}
+
+	function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
 }
+
+	// Close the dropdown if the user clicks outside of it
+	window.onclick = function(event) {
+	if (!event.target.matches('.dropbtn')) {
+		var dropdowns = document.getElementsByClassName("dropdown-content");
+		var i;
+		for (i = 0; i < dropdowns.length; i++) {
+		var openDropdown = dropdowns[i];
+		if (openDropdown.classList.contains('show')) {
+			openDropdown.classList.remove('show');
+		}
+		}
+	}
+	}
   </script>
 </head>
 
@@ -58,7 +77,14 @@
 	<div id="container">
 		<div class ="locations">
 			<div class = "list">
-				Locations
+				<div class="dropdown">
+					<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+					<div id="myDropdown" class="dropdown-content">
+					  <a href="#home">Place 1</a>
+					  <a href="#about">Place 2</a>
+					  <a href="#contact">Place 3</a>
+					</div>
+				  </div>
 			</div>
 		</div>
 
