--- a/index.html
+++ b/index.html
@@ -29,25 +29,35 @@
 	
 	// GLOBAL VARIABLES
 		var myBool = false;
-		// var myD3Array = [4,3,7,1,3,1,6,5,6,4,8,3,7,1,3,4,6,1,4,7,2,9,4,2,4,6,1,2,5,1]
-		var myD3Array = [4,3,7,1,3]
+		var myD3Array = []
 		var Chart = require('chart.js');
 		var whichMonth = ''
 		var whichMonthName = ''
+		var myDesiredCity = ''
+		var desiredCityValue = 0
 
+
+		function runGraph(){
+			makeGraph()
+		}
+
+		// function callAlert(){
+		// 	const {dialog} = require('electron').remote
+		// 	const dialogOptions = {type: 'info', buttons: ['OK', 'Cancel'], message: 'Ready to graph?'}
+		// 	dialog.showMessageBox(dialogOptions, i => console.log(i))
+		// }
 	// QUERY FUNCTION
 	// ----------------------------------------------------------------------------------------------------------------------------------
 	function runQuery(){
 	
 		var arrayOfAllDates = new Array()
 		var singleMonthData = new Array()
-
-		makeGraph();
 		var MongoClient = require('mongodb').MongoClient
 		var url = 'mongodb://localhost:27017/'
 
 		var desiredCity = $('#selectCity').find(":selected").text();
 		console.log(desiredCity)
+		myDesiredCity = desiredCity
 
 		var desiredYear = $('#selectYear').find(":selected").text();
 		console.log(desiredYear)
@@ -55,33 +65,6 @@
 
 		var currentSelected = document.getElementById("currentSelectionValues")
 		currentSelected.innerHTML = "The current selection: "  + desiredCity + " during " + whichMonthName + " of " + desiredYear + ".";
-
-
-		// for(k=1;k<10;k++){
-		// 	for(p=1;p<10;p++){
-		// 		var newlocalregex = new RegExp(".*" + desiredYear + "-0" + k + "-0" + p + ".*")
-		// 		arrayOfAllDates.push(newlocalregex)
-		// 		console.log(newlocalregex)
-		// 	}
-		// 	for(p=10;p<31;p++){
-		// 		var newlocalregex = new RegExp(".*" + desiredYear + "-0" + k + "-" + p + ".*")
-		// 		arrayOfAllDates.push(newlocalregex)
-		// 		console.log(newlocalregex)
-		// 	}
-		// }
-
-		// for(k=10;k<13;k++){
-		// 	for(p=1;p<10;p++){
-		// 		var newlocalregex = new RegExp(".*" + desiredYear + "-" + k + "-0" + p + ".*")
-		// 		arrayOfAllDates.push(newlocalregex)
-		// 		console.log(newlocalregex)
-		// 	}
-		// 	for(p=10;p<31;p++){
-		// 		var newlocalregex = new RegExp(".*" + desiredYear + "-" + k + "-" + p + ".*")
-		// 		arrayOfAllDates.push(newlocalregex)
-		// 		console.log(newlocalregex)
-		// 	}
-		// }
 
 		for(p=1;p<10;p++){
 			var newlocalregex = new RegExp(".*" + desiredYear + "-" +  whichMonth + "-0" + p + ".*")
@@ -92,13 +75,12 @@
 			arrayOfAllDates.push(newlocalregex)
 		}
 
-		// console.log("AHHH", arrayOfAllDates)
-
 		MongoClient.connect(url, { useNewUrlParser: true } ,function(err, db) {
 			if (err) throw err
 			var dbo = db.db('mydb')
+			var myd3numbers = []
 
-			var query = { city: desiredCity }
+			var query = { city: desiredCity, parameter: 'pm25'}
 				dbo.collection('things').find(query).limit(1).toArray(function(err, result) {
 					if (err) throw err
 					console.log("resized result", result)
@@ -106,23 +88,25 @@
 						console.log("no data found")
 					}
 					else{
+						desiredCityValue = result[0].value
 						addMarker(result[0].latitude,result[0].longitude)
-						console.log("RESULT",result[0])
+						console.log("RESULT",result[0].value)
 						console.log("RESULT LNOG",result[0].longitude)
 					}
 					db.close()
 				})
 
-
-			for(i=0;i<arrayOfAllDates.length;i++){
-				console.log("ARRAY DATES - ", i,  " - ", arrayOfAllDates[i])
+			for(i=0;i<20;i++){
+				var flag = false
+				// console.log("ARRAY DATES - ", i,  " - ", arrayOfAllDates[i])
 				var query = { city: desiredCity, local: arrayOfAllDates[i] , parameter: "pm25"}
 				dbo.collection('things').find(query).limit(1).toArray(function(err, result) {
 					if (err) throw err
-					console.log("RESULSASDASNDAS", i ,result)
+					myd3numbers.push(result[0].value)
+					console.log(myd3numbers)
 					db.close()
-					
 				})
+				myD3Array = myd3numbers
 			}
 		})
   }
@@ -216,7 +200,7 @@
 	function makeGraph(){
 		var ctx = document.getElementById('myChart');
 		var labelArray = []
-		for (i = 1; i < myD3Array.length+1; i++) { 
+		for (i = 1; i < 20; i++) { 
 					labelArray.push(i.toString())
 		}
 
@@ -225,7 +209,7 @@
 			data: {
 				labels: labelArray,
         datasets: [{
-            label: 'My First dataset',
+            label: 'Amount of PM25 in the Atomosphere ',
             backgroundColor: 'rgb(255, 99, 132)',
             borderColor: 'rgb(255, 99, 132)',
             data: myD3Array
@@ -296,7 +280,17 @@ function initialize() {
 // Add marker to desired spot
 function addMarker(long,lat){
 	var marker = WE.marker([long, lat]).addTo(earth);
-	marker.bindPopup("<b>Hello world!</b><br>I am a popup.<br /><span style='font-size:10px;color:#999'>Tip: Another popup is hidden in Cairo..</span>", {maxWidth: 150, closeButton: true}).openPopup();
+	var pm25Val = ''
+	if(desiredCityValue.toFixed(3) < 15){
+		pm25Val = "color:#999'>This is a LOW level of pm25."
+	}
+	else if (desiredCityValue.toFixed(3) < 25){
+		pm25Val = "color:#090'>This is a MEDIUM level of pm25."
+	}
+	else{
+		pm25Val = "color:#900'>This is a HIGH level of pm25."
+	}
+	marker.bindPopup("<b>" + myDesiredCity +  "</b><br><br>Average PM25 Value: " + desiredCityValue.toFixed(2) +  "<br /><span style='font-size:10px;" + pm25Val + "</span>", {maxWidth: 150, closeButton: true}).openPopup();
 }
 
 // D3
@@ -330,7 +324,7 @@ function drawChart(data) {
 			<div class="search_categories" id="sc1">
 					<div class="select">
 						 <select name="search_categories" id="selectCountry">
-								<option <option>Choose a country</option>
+								<option>Choose a country</option>
 							</select>
 					 </div>
 			 </div>
@@ -367,7 +361,8 @@ function drawChart(data) {
 			<p id="currentSelectionValues">The current selection: </p>
 	</div>
 	<div id="submitButton">
-			<button id="button1" onclick="runQuery()"><h2>Submit</h2></button>
+			<button class="button1" id="button1" onclick="runQuery()"><h2>Submit</h2></button>
+			<button class="button2" id="button1" onclick="runGraph()"><h2>Make Graph</h2></button>
 	</div>
 	
 </body>
